museum-next-commit

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -24,6 +24,10 @@
     @include onDesktop {
       padding: 0 55px;
     }
+
+    @include onDesign {
+      padding: 0 215px;
+    }
   }
 
   &__header {
