--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,4 +1,5 @@
 .events {
+  width: 100%;
   margin-bottom: 150px;
 
   @include onTablet {
@@ -18,6 +19,10 @@
 
     @include onDesktop {
       padding: 0 55px;
+    }
+
+    @include onDesign {
+      padding: 0 215px;
     }
   }
 
@@ -120,6 +125,10 @@
       top: 470px;
       left: 355px;
       margin-bottom: 0;
+    }
+
+    @include onDesign {
+      left: 515px;
     }
   }
 }
