--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -11,6 +11,10 @@
     padding: 0 55px 35px;
   }
 
+  @include onDesign {
+    padding: 0 215px 35px;
+  }
+
   &__text {
     font-family: $fonts-2;
     font-weight: 300;
