--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,18 +2,23 @@
   font-family: "Montserrat", sans-serif;
   scroll-behavior: smooth;
   background-color: #eee;
+  overflow-x: hidden;
 
   &__body {
     margin: 0;
-    width: 320px;
-    background-color: #fff;
+    max-width: 320px;
+    background-color: $color-5;
 
     @include onTablet {
-      width: 768px;
+      max-width: 100%;
     }
 
     @include onDesktop {
-      width: 1280px;
+      max-width: 100%;
+    }
+
+    @include onDesign {
+      max-width: 100%;
     }
   }
 
