--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -4,6 +4,7 @@
   background-position: center;
   background-repeat: no-repeat;
   margin-bottom: 50px;
+  width: 100%;
 
   @include onTablet {
     display: flex;
