--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,11 +3,17 @@
   margin-bottom: 70px;
 
   @include onTablet {
+    width: 100%;
     margin-bottom: 88px;
   }
 
   @include onDesktop {
+    width: 100%;
     margin-bottom: 200px;
+  }
+
+  @include onDesign {
+    width: 100%;
   }
 
   &__menu {
@@ -15,7 +21,7 @@
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-    width: 320px;
+    width: 100%;
     height: 300px;
     padding: 10px 24px;
     background-image: url(../images/Museum.png);
@@ -72,6 +78,10 @@
       width: 470px;
       padding: 45px 30px 0 55px;
     }
+
+    @include onDesign {
+      padding: 45px 155px 0 0;
+    }
   }
 
   &__title {
@@ -112,6 +122,10 @@
     
     @include onDesktop {
       display: inherit;
+    }
+
+    @include onDesign {
+      left: 190px;
     }
   
     &-link {
