--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,4 +4,21 @@
 
 body {
   background: $c-gray;
+
 }
+
+@import "./utils/mixins";
+@import "./utils/vars";
+@import "../Blocks/header.scss";
+@import "../Blocks/icon.scss";
+@import "../Blocks/logo.scss";
+@import "../Blocks/nav.scss";
+@import "../Blocks/page.scss";
+@import "../Blocks/container.scss";
+@import "../Blocks/menu.scss";
+@import "../Blocks/grid.scss";
+@import "../Blocks/button.scss";
+@import "../Blocks/current-events.scss";
+@import "../Blocks/event.scss";
+@import "../Blocks/lecture.scss";
+@import "../Blocks/gallery.scss";
