--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
 $c-gray: #eee;
+
+$color-text-title: #000;
+$color-subtitle: #0f0e08;
+$color-menu: #1a5a4c;
+
+$width-logo-tablet: 220px;
+$max-width: 1170px;
