select slider block

--- a/src/Blocks/page.scss
+++ b/src/Blocks/page.scss
@@ -62,6 +62,14 @@
 
     &--gallery {
       margin-bottom: 100px;
+
+      @include onTablet {
+        margin-bottom: 92px;
+      }
+
+      @include onDesktop {
+        margin-bottom: 200px;
+      }
     }
   }
 }
