--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,6 @@
 
 body {
   background: $c-gray;
-
 }
 
 @import "./utils/mixins";
@@ -12,7 +11,6 @@ body {
 @import "../Blocks/header.scss";
 @import "../Blocks/icon.scss";
 @import "../Blocks/logo.scss";
-@import "../Blocks/nav.scss";
 @import "../Blocks/page.scss";
 @import "../Blocks/container.scss";
 @import "../Blocks/menu.scss";
@@ -22,3 +20,4 @@ body {
 @import "../Blocks/event.scss";
 @import "../Blocks/lecture.scss";
 @import "../Blocks/gallery.scss";
+@import "../Blocks/slider.scss";
