--- a/src/Blocks/gallery.scss
+++ b/src/Blocks/gallery.scss
@@ -1,5 +1,5 @@
 .gallery {
-  background-color: #fff;
+  //background-color: #fff;
   &__title {
     text-align: center;
 
@@ -15,134 +15,6 @@
     @include onTablet {
       text-align: left;
       font-size: 48px;
-    }
-  }
-
-  &__slider {
-    width: 100%;
-
-    @include onDesktop {
-      display: none;
-    }
-  }
-
-  &__slider-control {
-    display: none;
-  }
-
-  &__slider-slides-overflow {
-    width: calc(100% + 20px);
-    overflow: hidden;
-    height: 100%;
-
-    @include onTablet {
-      width: calc(100% + 34px);
-    }
-  }
-
-  &__slider-slides {
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-
-    margin-bottom: 20px;
-
-    @include onTablet {
-      margin-bottom: 32px;
-    }
-  }
-
-  &__slider-image {
-    width: 400%;
-    height: 100%;
-    display: flex;
-    flex-wrap: nowrap;
-  }
-
-  &__slider-photo {
-    height: 100%;
-    width: 280px;
-
-    @include onTablet {
-      width: 340px;
-      height: 543px;
-    }
-
-    margin-right: 16px;
-
-    @include onTablet {
-      margin-right: 20px;
-    }
-
-    &:last-child {
-      margin-right: 0px;
-    }
-  }
-
-  &__slider-img {
-    width: 100%;
-  }
-
-  &__slider-image {
-    transition: all 800ms;
-  }
-
-  &__slider-switch {
-    display: flex;
-    justify-content: center;
-  }
-
-  &__slider-switch-label {
-    width: 9px;
-    height: 9px;
-    border-radius: 50%;
-    background-color: #e0e0e0;
-    margin-right: 22px;
-
-    &:last-child {
-      margin-right: 0;
-    }
-  }
-
-  #switch-1:checked ~ &__slider-switch &__slider-switch-label[for="switch-1"] {
-    background-color: #1A5A4C;
-  }
-  #switch-2:checked ~ &__slider-switch &__slider-switch-label[for="switch-2"] {
-    background-color: #1A5A4C;
-  }
-  #switch-3:checked ~ &__slider-switch &__slider-switch-label[for="switch-3"] {
-    background-color: #1A5A4C;
-  }
-
-  #switch-4:checked ~ &__slider-switch &__slider-switch-label[for="switch-4"] {
-    background-color: #1A5A4C;
-  }
-
-  #switch-1::before ~ &__slider-slides &__slider-image {
-    margin-left: 0;
-  }
-
-  #switch-2:checked ~ &__slider-slides &__slider-image {
-    margin-left: -296px;
-
-    @include onTablet {
-      margin-left: -360px;
-    }
-  }
-
-  #switch-3:checked ~ &__slider-slides &__slider-image {
-    margin-left: -592px;
-
-    @include onTablet {
-      margin-left: -720px;
-    }
-  }
-
-  #switch-4:checked ~ &__slider-slides &__slider-image {
-    margin-left: -888px;
-
-    @include onTablet {
-      margin-left: -1080px;
     }
   }
 
