--- a/src/styles/utils/blocks/container.scss
+++ b/src/styles/utils/blocks/container.scss
@@ -1,11 +1,11 @@
 .container {
-  padding: 0 23px;
+  padding: 0 20px;
 
   @include tablet {
     padding: 0 34px;
   }
 
-  @include Desktop {
+  @include desktop {
     padding: 0 55px;
   }
 }
