--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,12 +5,12 @@
 @import "./utils/mixins";
 @import "./utils/vars";
 
-@import "./utils/blocks/header.scss";
-@import "./utils/blocks/resset.scss";
-
+@import "./utils/blocks/page.scss";
 @import "./utils/blocks/container.scss";
-@import "./utils/blocks/menu.scss";
-@import "./utils/blocks/ivents.scss";
-@import "./utils/blocks/galer.scss";
-@import "./utils/blocks/subscription.scss";
+@import "./utils/blocks/header.scss";
+@import "./utils/blocks/nav.scss";
+@import "./utils/blocks/ivent.scss";
+@import "./utils/blocks/clasic.scss";
+@import "./utils/blocks/gallery.scss";
+@import "./utils/blocks/subs.scss";
 @import "./utils/blocks/footer.scss";
