--- a/src/styles/utils/blocks/footer.scss
+++ b/src/styles/utils/blocks/footer.scss
@@ -1,114 +1,131 @@
 .footer {
-  margin-top: 50px;
 
-  &__content {
+  &__grid {
     @include tablet {
       display: grid;
-      grid-template-columns: repeat(6, 1fr);
-      grid-auto-rows: minmax(100px, auto);
+      grid-template-columns: repeat(6 , 1fr);
+      grid-template-rows: repeat(1, 1fr);
     }
 
-    @include Desktop {
+    @include desktop {
       display: grid;
       grid-template-columns: repeat(12, 1fr);
     }
   }
 
-  &__top {
+  &__block-for2 {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+
+    padding-bottom: 40px;
+
+    @include tablet {
+      display: grid;
+      grid-column: 1 / 3;
+      grid-row: 1;
+    }
+
+    @include desktop {
+      grid-column: 1;
+    }
   }
 
-  &__logo {
-    @include Desktop {
-      position: relative;
-      top: 13px;
+  &__block1 {
+    @include tablet {
+      margin-top: -80px;
+    }
+
+    @include desktop {
+      margin-bottom: -20px;
+    }
+  }
+
+  &__block2 {
+    @include tablet {
+      margin-top: -165px;
+    }
+
+    @include desktop {
+      margin-bottom: -60px;
     }
   }
 
   &__facebook {
-    margin-right: 26px;
+    padding-right: 25px;
+  }
+
+  &__wrap-for2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 
     @include tablet {
-      position: relative;
-      top: 120px;
-      left: -50px;
+      grid-column: 3 / 6;
+    }
+
+    @include desktop {
+      grid-column: 3 / 6;
     }
   }
 
-  &__instagram {
-    margin-right: 9px;
-
-    @include tablet {
-      position: relative;
-      top: 120px;
-    }
-
-    @include Desktop {
-      position: relative;
-      top: 91px;
-    }
-  }
-
-  &__info {
-    padding-top: 40px;
-
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 150%;
-    color: #0f0e08;
-
-    @include tablet {
-      grid-column: 2 / 6;
-    }
-  }
-
-  &__graphic {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &__description {
-    @include tablet {
-      margin-left: 20px;
-      margin-right: 20px;
-    }
-
-    @include Desktop {
-      position: relative;
-      top: -35px;
-    }
-  }
-
-  &__description-1 {
-    padding-bottom: 20px;
-    width: 220px;
-  }
-
-  &__description-2 {
-    padding-bottom: 20px;
+  &__wrap1 {
+    grid-template-columns: 1;
     width: 130px;
-  }
+    padding-bottom: 70px;
 
-  &__description-3 {
-    width: 130px;
-    margin-bottom: 70px;
-    
-  }
+    &::after {
+      content: "";
+      display: block;
+      width: 280px;
+      height: 1px;
+      background-color: rgba(26, 90, 76, 0.5);
+      margin-top: 70px;
+      grid-column: 1 / 2;
 
-  &__contacts {
-    width: 130px;
+      @include tablet {
+        width: 460px;
+        grid-column: 2 / 5;
+      }
 
-    @include Desktop {
-      position: relative;
-      top: -35px;
+      @include desktop {
+        width: 260px;
+        position: absolute;
+        margin-left: 320px;
+        margin-top: -54px;
+        transform: rotate(-90deg);
+        
+      }
     }
 
-    
+    @include tablet {
+      width: 220px;
+    }
+
+    @include desktop {
+      padding-bottom: 90px;
+    }
   }
 
-  &__contacts-1 {
+  &__p1 {
     padding-bottom: 20px;
+
+  }
+
+  &__wrap2 {
+    grid-template-rows: 2;
+
+    @include tablet {
+      width: 220px;
+    }
+  }
+
+  &__contact {
+    padding-bottom: 20px;
+  }
+
+  &__number {
+    width: 128px;
+
   }
 
   &__circle {
@@ -117,128 +134,133 @@
     border: 1px solid #1a5a4c;
     border-radius: 50%;
 
-    background-image: url(../images/str.png);
+    position: absolute;
+    right: 20px;
+    
+    background-image: url(../images/arrow-black.png);
     background-position: center;
     background-repeat: no-repeat;
-
-    position: relative;
-    left: 600px;
-    bottom: 40px;
-    margin-bottom: 50px;
     cursor: pointer;
 
+    &:hover {
+      transform: scale(1.1);
+      transition: 0.3s;
+    }
+
     @include tablet {
       display: none;
     }
 
-    @include Desktop {
+    @include desktop {
+      display: none;
+    }
+  }
+
+  &__bottom-for2again {
+    display: none;
+
+    @include tablet {
+      display: none;
+    }
+
+    @include desktop {
+      display: grid;
+      grid-column: 8 / 10;
+    }
+  }
+
+  &__bottom-for2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    margin-bottom: 80px;
+
+    @include tablet {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+    }
+
+    @include desktop {
       display: none;
     }
 
   }
 
-  &__under {
-    height: 460px;
-    width: 1px;
-    background: rgba(26, 90, 76, 0.5);
-    transform: rotate(-90deg);
-    margin: 0 auto;
-    margin-top: -220px;
+  &__link1 {
+    grid-column: 1;
 
     @include tablet {
-      position: relative;
-      height: 460px;
-      margin-top: 300px;
-      right: 300px;
-    }
-
-    @include Desktop {
-      transform: none;
-      position: relative;
-      bottom: 270px;
-      left: 100px;
-    }
-
-    @include Desktop {
-      @include Desktop {
-        position: relative;
-        top: -295px;
-      }
-    }
-  }
-
-  &__about {
-    display: flex;
-    justify-content: center;
-
-    @include tablet {
-      position: relative;
-      left: 130px;
-
-    }
-  }
-
-  &__g-1 {
-    margin-right: 20px;
-  }
-
-  &__g-2 {
-    @include tablet {
-      position: relative;
-      left: 170px;
+      grid-column: 2;
     }
   }
 
   &__gallery {
+    display: block;
     padding-bottom: 20px;
   }
 
-  &__us {
-    padding-bottom: 20px;
-  }
-
-  &__mari {
-    text-align: center;
-    margin-top: 80px;
-    margin-bottom: 10px;
-
-    font-weight: 300;
-    font-size: 12px;
-    line-height: 140.62%;
-    color: #0f0e08;
+  &__link2 {
+    grid-column: 2;
 
     @include tablet {
-      position: relative;
-      right: 170px;
-      top: 50px;
-    }
-
-    @include Desktop {
-      position: relative;
-      margin-top: 500px;
-      right: 700px;
+      grid-column: 4;
     }
   }
 
-  &__copy {
-    text-align: center;
+  &__about {
+    display: block;
+    padding-bottom: 20px;
+  }
+
+  &__link {
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 100%;
+    color: #0f0e08;
+  }
+
+  &__end {
     margin-bottom: 128px;
 
+    text-align: center;
     font-weight: 300;
     font-size: 12px;
     line-height: 140.62%;
     color: #0f0e08;
 
     @include tablet {
-      position: relative;
-      left: 400px;
-      top: 120px;
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-rows: repeat(1, 1fr);
     }
 
-    @include Desktop {
-      position: relative;
-      margin-top: 410px;
-      padding-right: 100px;
+    @include desktop {
+      grid-template-columns: repeat(12, 1fr);
+    }
+  }
+
+  &__end-1 {
+    padding-bottom: 10px;
+
+    @include tablet {
+      grid-column: 1 / 2;
+      grid-row: 1;
+    }
+
+    @include desktop {
+      grid-column: 1 / 3;
+    }
+  }
+
+  &__end-2 {
+    @include tablet {
+      grid-column: 5 / 6;
+      grid-row: 1;
+    }
+
+    @include desktop {
+      grid-column: 10 / 12;
     }
   }
 }
