--- a/src/styles/utils/blocks/header.scss
+++ b/src/styles/utils/blocks/header.scss
@@ -1,164 +1,201 @@
 .header {
-  margin-bottom: 50px;
-
-  @include tablet {
-    margin-bottom: 450px;
-  }
-
-  @include Desktop {
-    margin-bottom: 100px;
-  }
-
-  &__back {
-    height: 100vh;
-    display: block;
-    cursor: default;
-
-    background-position: center;
-    background-size: cover;
-    background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
+  margin-bottom: 90px;
+ 
+  &__blocks-for2 {
+    margin-bottom: 70px;
 
     @include tablet {
-      width: 374px;
-      height: 384px;
-      
-      position: absolute;
-      right: 0;
-      top: 0;
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-rows: repeat(1, 1fr);
     }
 
-    @include Desktop {
+    @include desktop {
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+    }
+  }
+
+  &__block1 {
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    background-image: url(../images/img.png);
+    background-position: center;
+    background-size: cover;
+
+    margin-bottom: 20px;
+
+    @include tablet {
+      grid-row: 1;
+      grid-column: 6;
+      height: 400px;
+      width: 400px;
+    }
+
+    @include desktop {
+      grid-column: 12;
       width: 725px;
       height: 655px;
     }
   }
 
-  &__icon {
-    display: block;
-    position: absolute;
-    top: 0;
-    margin-top: 23px;
+  &__menu {
+    padding-left: 23px;
+    padding-top: 33px;
 
-    width: 18px;
-    height: 18px;
-    background-position: center;
-    background-size: cover;
-    background-image: url(../images/menu.png);
+    &:hover {
+      transform: scale(1.2);
+      transition: 0.5s;
+    }
+
+    @include tablet {
+      position: absolute;
+      left: 0;
+      margin-left: 10px;
+    }
+
+    @include desktop {
+      margin-left: 32px;
+    }
   }
 
   &__logo {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 133px;
-
-    margin-top: 23px;
-
-    width: 50px;
-    height: 50px;
-    background-position: center;
-    background-size: cover;
-    background-image: url(../images/na.png);
+    margin-left: 300px;
+    padding-top: 15px;
 
     @include tablet {
-      right: 210px;
+      margin-left: 154px;
     }
 
-    @include Desktop {
-      right: 600px;
+    &:hover {
+      transform: scale(1.3);
+      transition: 0.5s;
+    }
+  }
+
+  &__block2 {
+    width: 280px;
+    text-align: center;
+
+    @include tablet {
+      grid-column: 1 / 3;
+      grid-row: 1;
+      padding-top: 127px;
+    }
+
+    @include desktop {
+      padding-top: 207px;
     }
   }
 
   &__title {
-    margin-top: 20px;
-    margin-bottom: 20px;
-
     font-weight: 700;
     font-size: 45px;
     line-height: 100%;
-    text-align: center;
     color: #000;
+    text-align: start;
 
     @include tablet {
-      position: absolute;
+      font-weight: 700;
       font-size: 54px;
-      top: 127px;
+      line-height: 120%;
     }
 
-    @include Desktop {
-      top: 149px;
-
-      font-weight: 700;
+    @include desktop {
       font-size: 72px;
       line-height: 120%;
-      color: #000;
     }
   }
 
-  &__button {
+  &__wrap {
     display: flex;
-    justify-content: center;
     align-items: center;
-    margin: 0 auto;
-
-    width: 230px;
-    height: 50px;
-    border: 1px solid $green;
-    padding-left: 100px;
+    margin-top: 20px;
 
     @include tablet {
-      position: absolute;
-      margin-top: -140px;
-      height: 60px;
+      margin-top: 38px;
     }
 
-    @include Desktop {
-      left: 200px;
-      margin-top: 10px;
+    @include desktop {
+      padding-top: 50px;
+
+      position: absolute;
+      margin-left: 100px;
+    }
+  }
+
+  &__circle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    color: #0f0e08;
+
+    border: 1px solid #1a5a4c;
+    width: 230px;
+    height: 50px;
+
+    @include tablet {
       height: 70px;
     }
 
-    &::after {
-      content: "";
-      margin-left: 120px;
-      width: 50px;
-      height: 50px;
-      background-color: $green;
+  }
 
-      background-image: url(../images/arrow.png);
-      background-repeat: no-repeat;
-      background-position: center;
-      cursor: pointer;
+  &__arrow {
+    width: 50px;
+    height: 55px;
+    background-color: #1a5a4c;
 
-      @include tablet {
-        height: 60px;
-      }
+    background-image: url(../images/arrow.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
 
-      @include Desktop {
-        height: 70px;
-      }
+    &:hover {
+      transform: scale(1.1);
+      transition: 0.5s;
+    }
+
+    @include tablet {
+      height: 73px;
+      width: 70px;
     }
   }
 
-  &__dekor {
-    @include Desktop {
+  &__line {
+    display: none;
+
+    @include tablet {
+      display: none;
+    }
+
+    @include desktop {
+      display: block;
       width: 1px;
       height: 70px;
       background-color: $green;
+      margin-top: 144px;
+    }
+  }
 
-      margin-top: 528px;
+  &__word {
+    display: none;
 
-      &::before {
-        content: "ПОДІЇ";
+    @include tablet {
+      display: none;
+    }
 
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 100%;
-        color: #687480;
+    @include desktop {
+      display: block;
+      text-align: start;
+      transform: rotate(-90deg);
+      position: absolute;
+      left: 38px;
+      margin-top: 100px;
 
-        transform: rotate(-90deg);
-        padding: 0 20px;
-      }
     }
   }
 }
