fix block button add subscription

--- a/src/Blocks/header.scss
+++ b/src/Blocks/header.scss
@@ -82,48 +82,33 @@
     }
   }
 
-  &__drop-menu {
+  &__form {
     display: flex;
     justify-content: center;
-    //margin-bottom: 70px;
 
     @include onTablet {
-      //margin-bottom: 107px;
       justify-content: left;
     }
 
     @include onDesktop {
       margin-left: 201px;
-      //margin-bottom: 318px;
     }
   }
 
-  &__button {
-    width: 50px;
-    height: 50px;
-
-    @include onTablet {
-      width: 70px;
-      height: 70px;
-    }
-  }
-
-  &__ticket {
+  &__input-text {
     box-sizing: border-box;
-    text-align: center;
 
     font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 48px;
     color: $color-subtitle;
-    height: 50px;
     border: 1px solid $color-menu;
     appearance: none;
     width: 100%;
-
-    //margin-bottom: 88px;
+    height: 50px;
+    line-height: 48px;
+    text-align: center;
 
     @include onTablet {
       //margin-bottom: 107px;
