--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,3 +21,4 @@ body {
 @import "../Blocks/lecture.scss";
 @import "../Blocks/gallery.scss";
 @import "../Blocks/slider.scss";
+@import "../Blocks/subscription.scss";
