--- a/src/Blocks/page.scss
+++ b/src/Blocks/page.scss
@@ -71,5 +71,13 @@
         margin-bottom: 200px;
       }
     }
+
+    &--subscription {
+      margin-bottom: 50px;
+
+      @include onDesktop {
+        margin-bottom: 48px;
+      }
+    }
   }
 }
