--- a/src/Blocks/slider.scss
+++ b/src/Blocks/slider.scss
@@ -5,7 +5,6 @@
     display: none;
   }
 
-
   &__control {
     display: none;
   }
@@ -42,7 +41,7 @@
   }
 
   &__photo {
-    height: 100%;
+    height: 410px;
     width: 280px;
 
     @include onTablet {
