--- a/src/Blocks/logo.scss
+++ b/src/Blocks/logo.scss
@@ -2,6 +2,11 @@
   width: 55px;
   height: 61px;
 
+  &__footer {
+    width: 63px;
+    height: 72px;
+  }
+
   @include onTablet {
     width: $width-logo-tablet;
     height: 72px;
