--- a/src/Blocks/icon.scss
+++ b/src/Blocks/icon.scss
@@ -10,4 +10,20 @@
     width: 13px;
     height: 13px;
   }
+
+  &--facebook {
+    width: 11px;
+    height: 24px;
+  }
+
+  &--instagramm {
+    width: 24px;
+    height: 24px;
+  }
+
+  &--back {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+  }
 }
