--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,3 +22,4 @@ body {
 @import "../Blocks/gallery.scss";
 @import "../Blocks/slider.scss";
 @import "../Blocks/subscription.scss";
+@import "../Blocks/footer.scss";
