trying to deploy all the existing changes

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,25 +1,6 @@
-/*.swiper {
-  &-slide {
-    margin: 20px;
-    width: 100vw;
-  }
-
-  &-picture {
-    max-width: 100vw;
-  }
-
-  @include onDeskTop {
-    display: none;
-  }
-
-  @include onMobile {
-    display: block;
-  }
-}*/
-
 .gallery {
   margin: 120px 20px;
-  padding-bottom: 230px;
+  //padding-bottom: 230px;
 
   @include onDeskTop {
     margin: 200px 55px;
