--- a/src/styles/blocks/sections.scss
+++ b/src/styles/blocks/sections.scss
@@ -18,6 +18,10 @@
     max-width: 370px;
     margin: auto;
 
+    @include onMobile {
+      margin-top: 50px;
+    }
+
     @include onTablet {
       margin: 0;
     }
@@ -52,6 +56,10 @@
   &-painting {
     margin-bottom: 20px;
     transition: transform 0.2s;
+
+    @include onMobile {
+      width: 100%;
+    }
 
     @include onTablet {
       width: 700px;
