--- a/src/Blocks/footer.scss
+++ b/src/Blocks/footer.scss
@@ -38,7 +38,7 @@
       display: inline-block;
       font-weight: 600;
 
-      @include onDesktop  {
+      @include onDesktop {
         font-weight: 600;
       }
     }
@@ -122,8 +122,14 @@
     padding: 0;
     margin: 0;
 
+    margin-bottom: 80px;
+
     @include onTablet {
       margin-bottom: 120px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 0;
     }
   }
 
@@ -160,7 +166,7 @@
     }
   }
 
-  &__topp {
+  &__top {
     display: flex;
     justify-content: space-between;
     align-items: center;
