--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,6 +1,10 @@
 .header {
   padding: 0;
   margin: 0;
+
+  &__link {
+    text-decoration: none;
+  }
   
   &__title {
     margin-top: 20px;
@@ -24,7 +28,7 @@
   }
   
   &__main-img {
-    background-image: url(../images/header-img.png);
+    background-image: url(../images/header.svg);
     @extend %icon;
     background-size: cover;
     height: 65vh;
