--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,6 +1,14 @@
 .footer {
   margin-top: 20px;
 
+  &__content {
+    @include desktop {
+      display: flex;
+      gap: 20px;
+      margin-left: -250px;
+    }
+  }
+
   &__icon {
     display: flex;
     justify-content: space-between;
@@ -11,7 +19,11 @@
     }
 
     @include tablet {
-      width: 500px;
+      // width: 500px;
+      width: min-content;
+      flex-direction: column;
+      justify-content: center;
+      gap: 10px;
     }
 
     @include desktop {
@@ -41,9 +53,23 @@
     @include tablet {
       width: 500px;
     }
+
+    @include desktop {
+      margin-top: 0;
+    }
   }
     
   &__top {
+
+    @include tablet {
+      width: 500px;
+      display: flex;
+      justify-content: space-between;
+      margin: 0 auto;
+      // margin-left: 120px;
+      gap: 20px;
+    }
+
     @include desktop {
       width: 500px;
       margin: 0 auto;
@@ -70,6 +96,10 @@
       justify-content: space-between;
       width: 550px;
       margin: 0 auto;
+    }
+
+    @include desktop {
+      margin-top: 50px;
     }
           
     &-paragraph {
