--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -5,6 +5,12 @@
   &--footer {
     border-top: 1px solid $color-green;
     margin: 10px 0;
+
+    @include desktop {
+      border-top: 1px solid transparent;
+      border-left: 1px solid $color-green;
+      height: 90%;
+    }
   }
 
   @include tablet {
