--- a/src/Blocks/current-events.scss
+++ b/src/Blocks/current-events.scss
@@ -68,6 +68,8 @@
 
     margin-bottom: 20px;
 
+    transition: $duration;
+
     @include onTablet {
       width: 100%;
       height: 520px;
@@ -100,11 +102,20 @@
       @include onTablet {
         background-image: url(../images/pictures/memorys_&_dreams_tablet.png);
 
+        @include onDesktop {
+          background-image: url(../images/pictures/memorys_&_dreams_descktop.png);
+        }
+
       }
 
       @include onDesktop {
         background-image: url(../images/pictures/memorys_&_dreams_descktop.png);
       }
+    }
+
+    &:hover {
+      transform: scale(105%, 105%);
+
     }
   }
 
