--- a/src/Blocks/gallery.scss
+++ b/src/Blocks/gallery.scss
@@ -16,6 +16,10 @@
       text-align: left;
       font-size: 48px;
     }
+
+    @include onDesktop {
+      font-size: 56px;
+    }
   }
 
   &__images {
@@ -23,11 +27,20 @@
 
     @include onDesktop {
       display: grid;
+      gap: 30px 30px;
+
+      object-fit: cover;
+
+      width: 100%;
+      height: 100%;
     }
   }
 
-  &__image {
-    width: 100%;
-    height: 100%;
+  &__scale {
+    transition: $duration;
+
+    &:hover {
+      transform: scale(105%, 105%);
+    }
   }
 }
