--- a/src/Blocks/header.scss
+++ b/src/Blocks/header.scss
@@ -97,6 +97,7 @@
 
   &__input-text {
     box-sizing: border-box;
+    background-color: $color-page;
 
     font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
