--- a/src/Blocks/page.scss
+++ b/src/Blocks/page.scss
@@ -1,5 +1,6 @@
 .page {
-  background-color: #e5e5e5;
+  background-color: $color-page;
+  scroll-behavior: smooth;
 
   &__body {
     font-family: "Montserrat", "IBM Plex Sans", sans-serif;
@@ -14,7 +15,7 @@
     right: 0;
 
     transform: translateX(-100%);
-    transition: transform 0.8s;
+    transition: transform $duration;
 
     &:target {
       transform: translateX(0);
@@ -69,14 +70,6 @@
 
       @include onDesktop {
         margin-bottom: 200px;
-      }
-    }
-
-    &--subscription {
-      margin-bottom: 50px;
-
-      @include onDesktop {
-        margin-bottom: 48px;
       }
     }
   }
