--- a/src/Blocks/slider.scss
+++ b/src/Blocks/slider.scss
@@ -44,6 +44,8 @@
     height: 410px;
     width: 280px;
 
+    transition: $duration;
+
     @include onTablet {
       width: 340px;
       height: 543px;
@@ -57,6 +59,10 @@
 
     &:last-child {
       margin-right: 0;
+    }
+
+    &:hover {
+      transform: scale(105%, 105%);
     }
   }
 
