--- a/src/Blocks/subscription.scss
+++ b/src/Blocks/subscription.scss
@@ -1,4 +1,6 @@
 .subscription {
+  background-color: #fff;
+  
   background-image: url(../images/pictures/subscriptio_backgr_mobile.png);
   background-position: center;
   background-repeat: no-repeat;
