--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -3,6 +3,9 @@ $c-gray: #eee;
 $color-text-title: #000;
 $color-subtitle: #0f0e08;
 $color-menu: #1a5a4c;
+$color-page: #e5e5e5;
 
 $width-logo-tablet: 220px;
 $max-width: 1170px;
+
+$duration: 400ms;
