--- a/src/Blocks/button.scss
+++ b/src/Blocks/button.scss
@@ -2,6 +2,7 @@
   background-repeat: no-repeat;
   background-position: center;
   box-sizing: border-box;
+  cursor: pointer;
   width: 50px;
   height: 50px;
   border: 0;
