--- a/src/Blocks/footer.scss
+++ b/src/Blocks/footer.scss
@@ -1,5 +1,11 @@
 .footer {
-  //height: 100%;
+  background-color: #fff;
+  padding-top: 50px;
+
+  @include onDesktop {
+    padding-top: 48px;
+  }
+
   &__schedule {
     font-family: "IBM Plex Sans", sans-serif;
     font-style: normal;
@@ -28,6 +34,10 @@
 
     &--note {
       margin-bottom: 70px;
+
+      @include onTablet {
+        margin-bottom: 64px;
+      }
 
       @include onDesktop {
         margin-bottom: 0;
@@ -71,6 +81,10 @@
     border-bottom: 1px solid rgba(26, 90, 76, 0.5);
     margin-bottom: 40px;
 
+    @include onTablet {
+      margin-bottom: 64px;
+    }
+
     @include onDesktop {
       position: relative;
       border-left: 1px solid rgba(26, 90, 76, 0.5);
@@ -80,24 +94,22 @@
 
       margin-bottom: 0;
     }
+  }
 
-    &::before {
-      position: relative;
-      top: -20px;
-      justify-self: end;
-      left: calc(100% + 20px);
-      content: "";
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      border: 1px solid #1a5a4c;
-      background-image: url(../images/icon/arrow_up.svg);
-      background-position: center;
-      background-repeat: no-repeat;
+  &__back-button {
+    justify-self: end;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 1px solid $color-menu;
+    background-image: url(../images/icon/arrow_up.svg);
+    background-position: center;
+    background-repeat: no-repeat;
 
-      @include onTablet {
-        display: none;
-      }
+    margin-bottom: 20px;
+
+    @include onTablet {
+      display: none;
     }
   }
 
@@ -112,13 +124,13 @@
   }
 
   &__menu-item {
-    width: 130px;
+    font-size: 0;
     margin-right: 20px;
     margin-bottom: 20px;
   }
 
   &__menu-list {
-
+    list-style: none;
     padding: 0;
     margin: 0;
 
@@ -134,6 +146,8 @@
   }
 
   &__menu-link {
+    font-family: "IBM Plex Sans", sans-serif;
+    text-decoration: none;
     font-weight: 400;
     font-size: 14px;
     color: $color-subtitle;
@@ -148,13 +162,13 @@
     text-align: center;
     color: $color-subtitle;
 
-    margin-bottom: 50px;
+    padding-bottom: 50px;
 
     @include onTablet {
       display: flex;
       justify-content: space-between;
 
-      margin-bottom: 36px;
+      padding-bottom: 36px;
     }
   }
 
@@ -205,8 +219,12 @@
     text-decoration: none;
     margin-right: 26px;
 
+    @include onTablet {
+      margin-right: 38px;
+    }
+
     @include onDesktop {
-      margin-right: 28px;
+      margin-right: 27px;
     }
   }
 
