rename img files

--- a/src/Blocks/current_events.scss
+++ b/src/Blocks/current_events.scss
@@ -85,31 +85,31 @@
     }
 
     &--go-back {
-      background-image: url(../images/pictures/go_&_back_mobile.png);
+      background-image: url(../images/pictures/go_back_mobile.png);
 
       @include onTablet {
-        background-image: url(../images/pictures/go_&_back_700_520_tablet.png);
+        background-image: url(../images/pictures/go_back_700_520_tablet.png);
       }
 
       @include onDesktop {
-        background-image: url(../images/pictures/go_&_back_670_520.png);
+        background-image: url(../images/pictures/go_back_670_520.png);
       }
     }
 
     &--memories-dreams {
-      background-image: url(../images/pictures/memorys_&_dreams_mobile.png);
+      background-image: url(../images/pictures/memorys_dreams_mobile.png);
 
       @include onTablet {
-        background-image: url(../images/pictures/memorys_&_dreams_tablet.png);
+        background-image: url(../images/pictures/memorys_dreams_tablet.png);
 
         @include onDesktop {
-          background-image: url(../images/pictures/memorys_&_dreams_descktop.png);
+          background-image: url(../images/pictures/memorys_dreams_descktop.png);
         }
 
       }
 
       @include onDesktop {
-        background-image: url(../images/pictures/memorys_&_dreams_descktop.png);
+        background-image: url(../images/pictures/memorys_dreams_descktop.png);
       }
     }
 
