--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,7 +16,7 @@ body {
 @import "../Blocks/menu.scss";
 @import "../Blocks/grid.scss";
 @import "../Blocks/button.scss";
-@import "../Blocks/current-events.scss";
+@import "../Blocks/current_events.scss";
 @import "../Blocks/event.scss";
 @import "../Blocks/lecture.scss";
 @import "../Blocks/gallery.scss";
