add jest module

--- a/src/Blocks/header.scss
+++ b/src/Blocks/header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-image: url(../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
+  background-image: url(../images/muzej.png);
   background-repeat: no-repeat;
   background-position: top right;
   background-size: 100vw 300px;
