yuliia-nudyk_museum

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,31 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/grid.scss";
+@import "./blocks/section-title.scss";
+@import "./blocks/subtitle.scss";
+
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/menu-main.scss";
+@import "./blocks/menu-list.scss";
+@import "./blocks/schedule.scss";
+@import "./blocks/national-museum.scss";
+
+@import "./blocks/current-events.scss";
+@import "./blocks/events.scss";
+@import "./blocks/event.scss";
+
+@import "./blocks/lecture.scss";
+@import "./blocks/lecture-announcement.scss";
+
+@import "./blocks/gallery.scss";
+@import "./blocks/gallery-slider.scss";
+@import "./blocks/gallery-desktop-images.scss";
+@import "./blocks/subscription.scss";
+
+@import "./blocks/footer.scss";
+@import "./blocks/menu-footer.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/menu-list-footer.scss";
