--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,8 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+%section-title {
+  font-size: 36px;
+  line-height: 100%;
+
+  @include onTablet {
+    font-size: 48px;
+  }
 }
