--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,8 @@
-$c-gray: #eee;
+$titleFont: "Montserrat", sans-serif;
+$mainFont: "IBM Plex Sans", sans-serif;
+
+$blackColor: #0f0e08;
+$darkGreenColor: #1a5a4c;
+$orangeColor: #f14a27;
+$greyColor: #687480;
+$darkGreyColor: #4e4e4e;
