yuliia-nudyk_museum-edited

--- a/src/styles/blocks/menu-footer.scss
+++ b/src/styles/blocks/menu-footer.scss
@@ -54,6 +54,8 @@
     position: absolute;
     right: 0;
     bottom: 120px;
+
+    transition: all 0.3s;
     
     &:hover {
       transform: scale(1.1);
