--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -12,7 +12,7 @@
 
     @include onTablet {
       position: absolute;
-      width: calc((100% - 210px) * 0.5 + 90px);
+      // width: calc((100% - 210px) * 0.5 + 90px);
       max-width: 444px;
     }
     @include onDesktop {
