--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -15,6 +15,10 @@
     &--with-menu {
       overflow: hidden;
     }
+
+    @include onTablet {
+      padding: 0 10px;
+    }
   }
 
   &__section {
