yuliia-nudyk_Museum-edited2

--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -10,6 +10,8 @@
 
     margin-bottom: 20px;
 
+    @include hover(transform, scale(1.05));
+
     @include onTablet {
       height: 520px;
       margin-bottom: 44px;
