--- a/src/styles/blocks/gallery-desktop-images.scss
+++ b/src/styles/blocks/gallery-desktop-images.scss
@@ -12,6 +12,8 @@
     width: 100%;
     height: 100%;
 
+    @include hover(transform, scale(1.05));
+
     &--1 {
       @extend .grid__item--desktop-1-4;
     }
