--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,8 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "../styles/utils";
+@import "../styles/blocks/page";
+@import "../styles/blocks/header";
+@import "../styles/blocks/menu";
+@import "../styles/blocks/events";
+@import "../styles/blocks/gallery";
+@import "../styles/blocks/subscription";
+@import "../styles/blocks/footer";
