museum-not-the-last

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -1,6 +1,7 @@
 .button {
   box-sizing: border-box;
   display: flex;
+  justify-content: center;
 
   @include onDesktop {
     padding-left: 200px;
@@ -8,8 +9,8 @@
 
   &__box {
     width: 230px;
-    background-color: $color-5;
-    border: 1px solid $color-1;
+    background-color: $colorWhite;
+    border: 1px solid $colorGreen;
     cursor: pointer;
     transition-duration: 0.5s;
 
@@ -20,29 +21,21 @@
 
   &__text {
     text-decoration: none;
-    color: $color-2;
+    color: $colorBlack;
     font-family: $fonts-2;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
-    transition-duration: 0.5s;
-
-    &:hover {
-      color: $color-6;
-    }
+    @include hover(color, $colorRed);
   }
 
   &__angle {
     width: 50px;
     height: 50px;
-    background-color: $color-1;
+    background-color: $colorGreen;
     border: none;
     cursor: pointer;
-    transition-duration: 0.5s;
-
-    &:hover {
-      background-color: $color-6;
-    }
+    @include hover(background-color, $colorRed);
 
     @include onTablet {
       width: 70px;
