--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -6,6 +6,10 @@
   }
 
   @include onDesktop {
-    padding: 0 55px;
+    padding: 0 50px;
+  }
+
+  @include onDesign {
+    padding: 0 200px;
   }
 }
