--- a/src/styles/blocks/date.scss
+++ b/src/styles/blocks/date.scss
@@ -20,11 +20,8 @@
   }
 
   &__subtitle {
-    font-family: $fonts-2;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 100%;
-    color: $color-3;
+    @extend %h4;
+    color: $colorLightGray;
 
     @include onTablet {
       font-size: 14px;
@@ -37,7 +34,7 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 150%;
-    color: $color-1;
+    color: $colorGreen;
 
     @include onTablet {
       font-size: 14px;
