--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -21,7 +21,7 @@
     font-size: 12px;
     line-height: 140.62%;
     text-align: center;
-    color: $color-2;
+    color: $colorBlack;
     margin-bottom: 10px;
 
     &:last-child {
