--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -17,17 +17,14 @@
     box-sizing: border-box;
     width: 230px;
     height: 50px;
+    padding-left: 24px;
+    outline: none;
 
     &::placeholder {
       font-weight: 400;
       font-size: 14px;
       line-height: 100%;
       color: #687480;
-      padding-left: 24px;
-    }
-
-    &:focus {
-      outline: none;
     }
 
     @include onTablet {
@@ -37,20 +34,21 @@
 
     @include onDesktop {
       width: 470px;
+      padding-left: 32px;
     }
   }
 
   &__angle {
     height: 50px;
     width: 50px;
-    background-color: $color-6;
-    border: 1px solid $color-6;
+    background-color: $colorRed;
+    border: 1px solid $colorRed;
     cursor: pointer;
     transition-duration: 0.5s;
 
     &:hover {
-      background-color: $color-1;
-      border: $color-1;
+      background-color: $colorGreen;
+      border: $colorGreen;
     }
 
     @include onTablet {
