--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -2,7 +2,7 @@
   font-weight: 700;
   font-size: 30px;
   line-height: 100%;
-  color: $color-2;
+  color: $colorBlack;
   text-decoration: none;
 
   @include onTablet {
