--- a/src/styles/blocks/subtitle.scss
+++ b/src/styles/blocks/subtitle.scss
@@ -6,6 +6,7 @@
   }
 
   &--lecture {
+    margin-bottom: 20px;
     @include onTablet {
       padding: 0 55px;
       margin-bottom: 50px;
@@ -17,15 +18,8 @@
     align-items: center;
     gap: 10px;
     text-decoration: none;
-    font-weight: 400;
-    font-size: 28px;
-    line-height: 100%;
-    color: $color-2;
-    transition-duration: 0.3s;
-
-    &:hover {
-      color: $color-6;
-    }
+    @extend %h3;
+    @include hover(color, $colorRed);
 
     @include onTablet {
       font-size: 36px;
@@ -45,7 +39,7 @@
   &__button {
     width: 10px;
     height: 10px;
-    background-color: $color-6;
+    background-color: $colorRed;
     border: none;
     cursor: pointer;
 
