--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -1,9 +1,5 @@
 .title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 100%;
-  text-align: center;
-  color: $color-2;
+  @extend %h2;
   margin-bottom: 40px;
 
   @include onTablet {
@@ -18,7 +14,7 @@
   }
 
   &--color-white {
-    color: $color-5;
+    color: $colorWhite;
     padding: 88px 0 20px;
     margin-bottom: 0;
 
@@ -29,5 +25,9 @@
     @include onDesktop {
       padding: 163px 0 16px;
     }
+  }
+
+  &--color-red {
+    color: $colorRed;
   }
 }
