--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
-@import "variables";
-@import "mixins";
+@import "utils/variables";
+@import "utils/mixins";
+@import "utils/extends";
 
 @import "blocks/page";
 @import "blocks/header";
@@ -17,5 +18,6 @@
 @import "blocks/footer";
 @import "blocks/form";
 @import "blocks/button";
-@import "blocks/extends";
 @import "blocks/subtitle";
+@import "blocks/lecture";
+@import "blocks/grid";
