--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -1,32 +1,26 @@
 .contacts {
-  margin-bottom: 40px;
-
   @include onTablet {
     margin-bottom: 64px;
   }
 
   @include onDesktop {
-    display: flex;
-    justify-content: space-between;
     margin-bottom: 87px;
   }
 
-  &__content {
-    width: 280px;
-    padding: 0 20px;
-    
-    @include onTablet {
-      display: flex;
-      gap: 20px;
-      padding: 0 34px;
-    }
+  &__container {
+    @extend %center;
 
     @include onDesktop {
-      padding: 0 55px;
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
     }
+  }
 
-    @include onDesign {
-      padding: 0 215px;
+  &__content {
+    @include onTablet {
+      display: flex;
+      width: 100%;
     }
   }
 
@@ -40,8 +34,13 @@
       display: flex;
       flex-direction: column;
       height: 150px;
+      width: max-content;
       margin: 0;
-      padding-right: 30px;
+      padding-right: 40px;
+    }
+
+    @include onDesktop {
+      padding-right: 130px;
     }
   }
 
@@ -51,15 +50,107 @@
   }
 
   &__schedule {
+    display: flex;
+    gap: 20px;
     border-bottom: 1px solid #1a5a4c80;
+    width: 100%;
+    margin-bottom: 40px;
 
     @include onTablet {
       margin-bottom: 64px;
+      padding-bottom: 64px;
     }
 
     @include onDesktop {
       border-bottom: none;
       border-right: 1px solid #1a5a4c80;
+      margin-bottom: 0;
+      gap: 30px;
+      width: max-content;
+      padding: 0 65px 0 0;
     }
+  }
+
+  &__box {
+    height: max-content;
+    @include onTablet {
+      width: 220px;
+    }
+
+    @include onDesktop {
+      width: 170px;
+    }
+  }
+
+  &__subtitle {
+    font-family: $fonts-2;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 140.62%;
+    color: $colorBlack;
+    margin-bottom: 20px;
+  }
+
+  &__text {
+    font-family: $fonts-2;
+    font-size: 14px;
+    line-height: 150%;
+    color: $colorBlack;
+
+    &--week {
+      margin-bottom: 15px;
+    }
+  }
+
+  &__list {
+    padding: 0;
+    list-style: none;
+  }
+
+  &__link {
+    text-decoration: none;
+    font-family: $fonts-2;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    color: $colorBlack;
+    @include hover(color, $colorRed);
+  }
+
+  &__nav-list {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    width: 280px;
+    margin-bottom: 80px;
+
+    @include onDesktop {
+      
+      gap: 32px;
+      width: max-content;
+      height: max-content;
+      margin: 0;
+    }
+  }
+
+  &__nav-item {
+    width: 130px;
+
+    @include onDesktop {
+      width: 170px;
+    }
+  }
+
+  &__nav-link {
+    text-decoration: none;
+    font-family: $fonts-2;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 100%;
+    color: $colorBlack;
+    @include hover(color, $colorRed);
   }
 }
