--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,29 +1,17 @@
 .events {
-  width: 100%;
-  margin-bottom: 150px;
+  padding: 0 20px;
+  margin-bottom: 60px;
 
   @include onTablet {
     padding: 0 34px;
   }
 
   @include onDesktop {
-    padding: 0;
+    padding: 0 55px;
   }
 
-  &__container {
-    padding: 0 20px;
-
-    @include onTablet {
-      padding: 0;
-    }
-
-    @include onDesktop {
-      padding: 0 55px;
-    }
-
-    @include onDesign {
-      padding: 0 215px;
-    }
+  @include onDesign {
+    padding: 0 215px;
   }
 
   &__block {
@@ -41,24 +29,27 @@
       width: 370px;
     }
   }
- 
+
   &__image {
+    width: 100%;
+    height: 210px;
+    background-position: center;
+    background-size: cover;
     margin-bottom: 20px;
-    transition: transform 0.3s;
+    @include hover(transform, scale(1.05));
 
     @include onTablet {
       margin-bottom: 40px;
-      width: 700px;
       height: 520px;
     }
+  }
 
-    @include onDesktop {
-      width: 670px;
-    }
-
-    &:hover {
-      transform: scale(1.05);
-    }
+  &__img-langscape {
+    background-image: url(../images/landscape.jpg);
+  }
+ 
+  &__img-girl {
+    background-image: url(../images/girl.jpg);
   }
 
   &__text {
@@ -66,7 +57,7 @@
     font-weight: 300;
     font-size: 16px;
     line-height: 150%;
-    color: $color-4;
+    color: $colorDarkGray;
     margin-bottom: 60px;
 
     @include onTablet {
@@ -82,53 +73,6 @@
       @include onTablet {
         margin-bottom: 112px;
       }
-    }
-  }
-
-  &__lecture {
-    position: relative;
-    background-image: url(../images/Rectangle5.png);
-    background-size: cover;
-    background-position: center;
-    height: 210px;
-
-    @include onTablet {
-      height: 390px;
-      margin-bottom: 208px;
-    }
-
-    @include onDesktop {
-      height: 550px;
-      margin-bottom: 300px;
-    }
-  }
-
-  &__lecture-content {
-    position: absolute;
-    top: 150px;
-    left: 20px;
-    width: 280px;
-    height: 140px;
-    background-color: #fff;
-    border-bottom: 1px solid #1a5a4c40;
-    margin-bottom: 100px;
-
-    @include onTablet {
-      width: 570px;
-      height: 204px;
-      top: 300px;
-      left: 65px;
-      margin-bottom: 0;
-    }
-
-    @include onDesktop {
-      top: 470px;
-      left: 355px;
-      margin-bottom: 0;
-    }
-
-    @include onDesign {
-      left: 515px;
     }
   }
 }
