--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,5 +1,5 @@
 .header {
-  position: relative;
+  @extend %center;
   margin-bottom: 70px;
 
   @include onTablet {
@@ -56,7 +56,7 @@
 
       @include onDesktop {
         padding-top: 0;
-        margin-bottom: 150px;
+        margin-bottom: 220px;
       }
     }
   }
@@ -69,6 +69,7 @@
 
   &__content {
     padding: 0 20px;
+
     @include onTablet {
       width: 340px;
       padding-left: 34px;
@@ -76,20 +77,16 @@
 
     @include onDesktop {
       width: 470px;
-      padding: 45px 30px 0 55px;
+      padding: 0 30px 0 55px;
     }
 
     @include onDesign {
-      padding: 45px 155px 0 0;
+      padding: 45px 155px 0 200px;
     }
   }
 
   &__title {
-    font-weight: 700;
-    font-size: 45px;
-    line-height: 100%;
-    text-align: center;
-    color: #000;
+    @extend %h1;
     margin-bottom: 20px;
 
     @include onTablet {
@@ -134,7 +131,7 @@
       font-weight: 700;
       font-size: 14px;
       line-height: 100%;
-      color: $color-3;
+      color: $colorLightGray;
       
       
       &::before {
@@ -143,7 +140,7 @@
         content: "";
         width: 70px;
         height: 1px;
-        background-color: $color-1;
+        background-color: $colorGreen;
       }
     }
   }
