--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,25 +1,11 @@
 .page {
   font-family: "Montserrat", sans-serif;
   scroll-behavior: smooth;
-  background-color: #eee;
   overflow-x: hidden;
 
   &__body {
     margin: 0;
-    max-width: 320px;
-    background-color: $color-5;
-
-    @include onTablet {
-      max-width: 100%;
-    }
-
-    @include onDesktop {
-      max-width: 100%;
-    }
-
-    @include onDesign {
-      max-width: 100%;
-    }
+    background-color: $colorWhite;
   }
 
   &__nav {
