--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,13 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "utils/normalize";
+@import "utils/vars";
+@import "utils/mixins";
+@import "utils/grid";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/container.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/header.scss";
+@import "./blocks/actual.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscrib.scss";
+@import "./blocks/footer.scss";
