--- a/src/styles/blocks/subscrib.scss
+++ b/src/styles/blocks/subscrib.scss
@@ -44,9 +44,13 @@
     }
   }
 
-  &__input {
+  &__input-box {
     width: 100%;
     height: 50px;
+  }
+
+  &__input {
+    width: 100%;
     border: none;
     background-color: #fff;
 
