--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,10 @@
 @import "./blocks/logo.scss";
 @import "./blocks/museum.scss";
 @import "./blocks/menu.scss";
+@import "./blocks/podii.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/footer.scss";
 
 body {
   background: $c-gray;
