add hovers for all links

--- a/src/styles/blocks/actual.scss
+++ b/src/styles/blocks/actual.scss
@@ -27,6 +27,13 @@
     width: 100%;
     object-position: center;
     object-fit: cover;
+
+    &:hover {
+      border-radius: 15%;
+      border-color: $bg-green;
+      border-width: 2px;
+      border-style: solid;
+    }
   }
 
   &__info-box {
