--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -76,15 +76,24 @@
 
     border-color: $bg-green;
     border-style: solid;
-    background-size: 1px;
+    border-width: 1px;
+
     color: $title-color;
     font-size: 16px;
     font-weight: 500;
+
     padding-left: 80px;
     margin: 0 auto;
 
     @include onTablet {
       height: 70px;
+    }
+
+    &:hover {
+      font-size: 18px;
+      letter-spacing: 1px;
+      color: #fff;
+      background-color: $bg-green;
     }
   }
 
