--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -14,6 +14,8 @@
     }
   }
 
+  
+
   &__link-section {
     position: relative;
     width: 80%;
@@ -28,6 +30,7 @@
   }
 
   &__section {
+    width: 100px;
     display: flex;
     flex-direction: column;
     gap: 24px;
@@ -71,15 +74,23 @@
     font-weight: 400;
     font-size: 14px;
     color: #fff;
+    margin: 0;
 
     @include onTablet {
       width: 40%;
     }
 
     &--link {
-    font-size: 16px;
-    font-weight: 500;
-    width: max-content;
+      font-size: 16px;
+      font-weight: 500;
+      width: max-content;
+      border-bottom: 1px solid $bg-green;
+      padding-bottom: 2px;
+
+      &:hover {
+        letter-spacing: 1px;
+        border-bottom: 1px solid #fff;
+      }
     }
 
     &--time {
