--- a/src/styles/blocks/subscrib.scss
+++ b/src/styles/blocks/subscrib.scss
@@ -52,10 +52,11 @@
   &__input {
     width: 100%;
     border: none;
+
     background-color: #fff;
 
     font-family: 'Montserrat';
-    color: #687480;
+    color: $title-color;
 
     padding: 18px 24px;
 
@@ -68,6 +69,14 @@
     @include onDesktop {
       margin-right: 30px;
       padding: 28px 32px;
+    }
+
+    &::placeholder {
+      color: $title-color;
+    }
+
+    &:focus {
+      outline: none;
     }
   }
 
