--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,38 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "blocks/header";
+@import "blocks/arrow";
+@import "blocks/menu";
+@import "blocks/events";
+@import "blocks/events-description";
+@import "blocks/gallery";
+@import "blocks/swiper";
+@import "blocks/follow";
+@import "blocks/footer";
 
-body {
-  background: $c-gray;
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  box-sizing: border-box;
+  list-style: none;
+  transition: 0.3s;
+  scroll-behavior: smooth;
+}
+
+.out {
+  width: 100%;
+}
+
+.in {
+  padding: 0 55px;
+
+  @media (max-width: 768px) {
+    padding: 0 39px;
+  }
+
+  @media (max-width: 460px) {
+    padding: 0 20px;
+  }
 }
