--- a/src/styles/blocks/follow.scss
+++ b/src/styles/blocks/follow.scss
@@ -73,6 +73,8 @@
       @include glass($orange, 70px);
       background-image: url(../images/arrow.svg);
       border-radius: 0 50% 50% 0;
+      box-shadow: inset -0.8rem 1rem 0.8rem 0.2rem darken($orange, 15%),
+    inset 0.8rem -1rem 2rem darken($orange, 20%);
 
       @media (max-width: 460px) {
         height: 50px;
