fix logo hover and text

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -15,15 +15,15 @@
   &__logo-box {
     width: 68px;
     height: 73px;
+
+    @include onTablet {
+      margin-bottom: 62px;
+    }
   }
 
   &__logo {
     width: 58px;
     height: 63px;
-
-    @include onTablet {
-      margin-bottom: 62px;
-    }
 
     &:hover {
       width: 68px;
@@ -68,7 +68,7 @@
 
   &__text {
     width: max-content;
-    line-height: 15px;
+    line-height: 16px;
     color: $text-color;
 
     &--title {
@@ -81,11 +81,14 @@
     }
 
     &--location {
-      margin-bottom: 20px;
+      line-height: 19px;
+      margin-bottom: 12px;
+      padding-bottom: 4px;
 
       &:hover {
-        font-size: 17px;
-        letter-spacing: 1px;
+        font-size: 15px;
+        letter-spacing: 0.5px;
+        border-bottom: 1px solid $bg-green;
         color: $bg-green;
       }
     }
@@ -151,8 +154,8 @@
     margin-bottom: 12px;
 
     &:hover {
-      font-size: 18px;
-      letter-spacing: 1px;
+      font-size: 17px;
+      letter-spacing: 0.5px;
       border-bottom: 1px solid $bg-green;
       color: $bg-green;
     }
