--- a/src/styles/blocks/subscrib.scss
+++ b/src/styles/blocks/subscrib.scss
@@ -27,7 +27,7 @@
   &__text {
     font-size: 18px;
     color: #fff;
-    margin-bottom: 50px;
+    margin: 0 20px 50px;
 
     @include onTablet {
       margin-bottom: 70px;
@@ -52,8 +52,7 @@
   &__input {
     width: 100%;
     border: none;
-
-    background-color: #fff;
+    background-color: #d7d5d5;
 
     font-family: 'Montserrat';
     color: $title-color;
@@ -76,6 +75,7 @@
     }
 
     &:focus {
+      background-color: #fff;
       outline: none;
     }
   }
